--- a/templates/error_page.html
+++ b/templates/error_page.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>COMP SHOP</h1>
+    <h1>Ошибка</h1>
+    <p>{{ error_message }}</p>
 </body>
 </html>
