--- a/templates/comp_list.html
+++ b/templates/comp_list.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'navbar.html' %}
+{% load my_filters %}
+
+{% block content %}
   <h2>Список компьютеров</h2>
   <div class="computer-list">
-    {% for comp in computer %}
+    {% for comp in page_obj %}
       <div class="computer-item">
-        <h3>{{ comp.title }}</h3>
+        <h3>{{ comp.title | capitalize_first }}</h3>
         <p>{{ comp.info }}</p>
         <p>Цена: ${{ comp.price }}</p>
         <img src="{{ comp.image.url }}" alt="{{ comp.title }}">
@@ -19,20 +16,19 @@
 
   <div class="pagination">
     <span class="step-links">
-      {% if computer.has_previous %}
+      {% if page_obj.has_previous %}
         <a href="?page=1">&laquo; первая</a>
-        <a href="?page={{ computer.previous_page_number }}">предыдущая</a>
+        <a href="?page={{ page_obj.previous_page_number }}">предыдущая</a>
       {% endif %}
 
       <span class="current">
-        Страница {{ computer.number }} из {{ computer.paginator.num_pages }}.
+        Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}.
       </span>
 
-      {% if computer.has_next %}
-        <a href="?page={{ computer.next_page_number }}">следующая</a>
-        <a href="?page={{ computer.paginator.num_pages }}">последняя &raquo;</a>
+      {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">следующая</a>
+        <a href="?page={{ page_obj.paginator.num_pages }}">последняя &raquo;</a>
       {% endif %}
     </span>
   </div>
-</body>
-</html>
+{% endblock %}
