--- a/templates/order_list.html
+++ b/templates/order_list.html
@@ -25,6 +25,6 @@
         <p>У вас пока нет заказов.</p>
     {% endif %}
 
-    <a href="{% url 'create_order' %}">Создать новый заказ</a>
+    <a href="{% url 'order_create' %}">Создать новый заказ</a>
 </body>
 </html>
