--- a/templates/accounts/custom_template.html
+++ b/templates/accounts/custom_template.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'navbar.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+{% if user.is_authenticated %}
+<h2>{{ title }}</h2>
+<div>{{ data|unordered_list }}</div>
+{% else %}
+<p>Вам нужно войти в сеть</p>
+{% endif %}
+{% endblock %}
