--- a/templates/accounts/password_change_done.html
+++ b/templates/accounts/password_change_done.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'navbar.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+<h2>Изменение пароля</h2>
+<p>{{ title }}</p>
+{% endif %}
+{% endblock %}
