--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'navbar.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
 {% if user.is_authenticated %}
   <p>Вы уже в сети</p>
 {% else %}
@@ -14,5 +11,4 @@
     <button type="submit" class="btn btn-primary">Зарегестрироваться</button>
   </form>
 {% endif %}
-</body>
-</html>
+{% endblock %}
