--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'navbar.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+<h2>Изменить пароль</h2>
+{% if user.is_anonymous %}
+<p>Для смены пароля вам нужно войти в систему</p>
+{% else %}
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Войти">
+</form>
+{% endif %}
+{% endblock %}
