--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'navbar.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+    <h1>Выход</h1>
+    <p>{{ message }}</p>
+{% endblock %}
