--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'navbar.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+
 <h1>COMP SHOP</h1>
-</body>
-</html>
+<p> Добро пожаловать в наш магазин компьютеров, здесь вы можете выбрать подходящий себе компьютер </p><br>
+{% endblock %}
