--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,11 +1,59 @@
+{% load static %}
+{% load bootstrap4 %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-{% block content %}
-{% endblock %}
+  <style>
+    body {
+      /* Устанавливаем задний фон с изображением */
+      background-image: url('{% static "bakcground.jpg" %}');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed; /* Фиксированный фон */
+
+      /* Дополнительные стили для тела страницы */
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      color: white;
+    }
+  </style>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Панель навигации</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'main_page' %}">Главная</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'CompList' %}">Компьютеры</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'order_create' %}">Заказать</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'user_register' %}">Зарегестрироваться</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'user_profile' %}">Профиль</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  {% block content %}
+  {% endblock %}
 </body>
 </html>
