--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-{{ order.user }}<br>
-{{ order.products }}<br>
-{{ order.quantity }}<br>
-{{ order.total_price }}<br>
-{{ order.date }}<br>
-{{ order.shipping_address }}<br>
+{% extends 'navbar.html' %}
+{% load bootstrap4 %}
 
-</body>
-</html>
+{% block content %}
+
+<h1>Order Details</h1>
+  <p>User: {{ order.user.username }}</p>
+  <p>Products: {% for product in order.products.all %}{{ product.title }}, {% endfor %}</p>
+  <p>Quantity: {{ order.quantity }}</p>
+  <p>Total Price: {{ order.total_price }}</p>
+  <p>Date: {{ order.date }}</p>
+  <p>Shipping Address: {{ order.shipping_address }}</p>
+
+{% endblock %}
