--- a/templates/order_list.html
+++ b/templates/order_list.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список заказов</title>
-</head>
-<body>
+{% extends 'navbar.html' %}
+{% load bootstrap4 %}
+
+{% block content %}
+
     <h1>Список ваших заказов</h1>
 
     {% if orders %}
         <ul>
             {% for order in orders %}
                 <li>
-                    Заказ №{{ order.id }} (Общая стоимость: {{ order.total_price }} тг.)
+                    <a href=" {% url 'order_detail' pk=order.id %} ">Заказ №{{ order.id }} (Общая стоимость: {{ order.total_price }} тг.)</a>
                     <ul>
                         {% for product in order.products.all %}
                             <li>{{ product.title }} - {{ product.price }} тг. x {{ order.quantity }}</li>
@@ -26,5 +23,4 @@
     {% endif %}
 
     <a href="{% url 'order_create' %}">Создать новый заказ</a>
-</body>
-</html>
+{% endblock %}
