--- a/templates/comp_list.html
+++ b/templates/comp_list.html
@@ -3,37 +3,54 @@
 {% load bootstrap4 %}
 
 {% block content %}
-  <h2>Список компьютеров</h2>
-    {% for comp in page_obj %}
-      <div class="card" style="width: 18rem;">
-  <img src="{{ comp.image.url }}" class="card-img-top" alt="{{ comp.title }}">
-  <div class="card-body">
-  <h5 class="card-title">{{ comp.title | capitalize_first }}</h5>
-  <p class="card-text">{{ comp.info }}. Цена: {{ comp.price }}<br></p>
-    <a href="{% url 'CompDetail' pk=comp.id %}" class="btn btn-primary">Узнать подробнее </a>
-  </div>
-  </div>
-    {% endfor %}
+  <div class="container mt-5">
+    <h2 class="text-center mb-4">Список компьютеров</h2>
+    <div class="row">
+      {% for comp in computers %}
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <img src="{{ comp.image.url }}" class="card-img-top" alt="{{ comp.title }}">
+            <div class="card-body">
+              <h5 class="card-title">{{ comp.title | capitalize_first }}</h5>
+              <p class="card-text">{{ comp.info }}</p>
+              <p class="card-text">Цена: {{ comp.price }}</p>
+              <a href="{% url 'CompDetail' pk=comp.id %}" class="btn btn-primary">Узнать подробнее</a>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
 
-  {% if user.is_staff %}
-  <a href="{% url 'CompCreate' %}"> Добавить новый компьютер </a>
-  {% endif %}
+    {% if user.is_staff %}
+      <div class="text-center">
+        <a href="{% url 'CompCreate' %}" class="btn btn-success btn-lg">Добавить новый компьютер</a>
+      </div>
+    {% endif %}
 
-  <div class="pagination">
-    <span class="step-links">
-      {% if page_obj.has_previous %}
-        <a href="?page=1">&laquo; первая</a>
-        <a href="?page={{ page_obj.previous_page_number }}">предыдущая</a>
-      {% endif %}
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center mt-4">
+        {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page=1">&laquo; первая</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">предыдущая</a>
+          </li>
+        {% endif %}
 
-      <span class="current">
-        Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}.
-      </span>
+        <li class="page-item disabled">
+          <span class="page-link">Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}</span>
+        </li>
 
-      {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}">следующая</a>
-        <a href="?page={{ page_obj.paginator.num_pages }}">последняя &raquo;</a>
-      {% endif %}
-    </span>
+        {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">следующая</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">последняя &raquo;</a>
+          </li>
+        {% endif %}
+      </ul>
+    </nav>
   </div>
 {% endblock %}
