--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,54 +6,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <style>
-    body {
-      /* Устанавливаем задний фон с изображением */
-      background-image: url('{% static "bakcground.jpg" %}');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed; /* Фиксированный фон */
-
-      /* Дополнительные стили для тела страницы */
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      color: white;
-    }
-  </style>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Панель навигации</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
+    <a class="navbar-brand" href="{% url 'main_page' %}">
+      <img src="{% static 'logo.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      Oasis
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'main_page' %}">Главная</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'CompList' %}">Компьютеры</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'order_create' %}">Заказать</a>
         </li>
-          <li class="nav-item">
-          <a class="nav-link" href="{% url 'user_register' %}">Зарегестрироваться</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'user_profile' %}">Профиль</a>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Профиль
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'user_profile' %}">Мой профиль</a>
+            {% if user.is_authenticated %}
+              <a class="dropdown-item" href="{% url 'order_list' %}">Мои заказы</a>
+            {% endif %}
+            {% if not user.is_authenticated %}
+              <a class="dropdown-item" href="{% url 'user_register' %}">Регистрация</a>
+              <a class="dropdown-item" href="{% url 'user_login' %}">Вход</a>
+            {% endif %}
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'logout' %}">Выйзи из аккаунта</a>
+          </div>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-  {% block content %}
-  {% endblock %}
+
+{% block content %}
+{% endblock %}
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
