--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'order_create' %}">Заказать</a>
+          <a class="nav-link" href="{% url 'cart' %}">Корзина</a>
         </li>
       </ul>
       <ul class="navbar-nav">
@@ -31,9 +31,6 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'user_profile' %}">Мой профиль</a>
-            {% if user.is_authenticated %}
-              <a class="dropdown-item" href="{% url 'order_list' %}">Мои заказы</a>
-            {% endif %}
             {% if not user.is_authenticated %}
               <a class="dropdown-item" href="{% url 'user_register' %}">Регистрация</a>
               <a class="dropdown-item" href="{% url 'user_login' %}">Вход</a>
