--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -1,15 +1,27 @@
 {% extends 'navbar.html' %}
 {% load bootstrap4 %}
 
+{% block title %} смена пароля {% endblock %
 {% block content %}
-<h2>Изменить пароль</h2>
-{% if user.is_anonymous %}
-<p>Для смены пароля вам нужно войти в систему</p>
-{% else %}
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Войти">
-</form>
-{% endif %}
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Изменить пароль</h2>
+          {% if user.is_anonymous %}
+          <p class="card-text">Для смены пароля вам нужно войти в систему</p>
+          {% else %}
+          <form method="post">
+            {% csrf_token %}
+            {% bootstrap_form form %}
+            <button type="submit" class="btn btn-primary">Изменить пароль</button>
+          </form>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% include 'footer.html' %}
 {% endblock %}
