--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,15 +1,33 @@
- {% extends 'navbar.html' %}
-{% load bootstrap4 %}
+{% extends 'navbar.html' %}
 
+
+{% block title %} вход {% endblock %}
 {% block content %}
-{% if user.is_authenticated %}
-  <p>Вы уже вошли в систему</p>
-{% else %}
-  <form method="post" class="mt-3">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="hidden" name="next" value="{{ next }}">
-    <button type="submit" class="btn btn-primary">Войти в сеть</button>
-  </form>
-{% endif %}
+<div class="container">
+  <div class="row justify-content-center mt-5">
+    <div class="col-md-6">
+      {% if user.is_authenticated %}
+      <div class="alert alert-info" role="alert">
+        Вы уже вошли в систему
+      </div>
+      {% else %}
+      <form method="post" class="mt-3 p-4 rounded shadow bg-light">
+        {% csrf_token %}
+        <h2 class="mb-4">Вход в систему</h2>
+        <div class="form-group">
+          {{ form.username.label_tag }}
+          {{ form.username }}
+        </div>
+        <div class="form-group">
+          {{ form.password.label_tag }}
+          {{ form.password }}
+        </div>
+        <input type="hidden" name="next" value="{{ next }}">
+        <button type="submit" class="btn btn-primary btn-block">Войти</button>
+      </form>
+      {% endif %}
+    </div>
+  </div>
+</div>
+{% include 'footer.html' %}
 {% endblock %}
