--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,7 +1,17 @@
 {% extends 'navbar.html' %}
 {% load bootstrap4 %}
 
+{% block title %} выход {% endblock %}
 {% block content %}
-    <h1>Выход</h1>
-    <p>{{ message }}</p>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6">
+            <div class="card shadow p-4 mb-4 bg-white rounded">
+                <h1 class="text-center mb-4">Выход</h1>
+                <p class="lead text-center">{{ message }}</p>
+            </div>
+        </div>
+    </div>
+</div>
+{% include 'footer.html' %}
 {% endblock %}
