--- a/templates/accounts/password_change_done.html
+++ b/templates/accounts/password_change_done.html
@@ -1,7 +1,17 @@
 {% extends 'navbar.html' %}
 {% load bootstrap4 %}
 
+{% block title %} смена пароля {% endblock %}
 {% block content %}
-<h2>Изменение пароля</h2>
-<p>{{ title }}</p>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6">
+            <div class="card shadow p-4 mb-4 bg-white rounded">
+                <h2 class="text-center mb-4">Изменение пароля</h2>
+                <p class="lead text-center">{{ title }}</p>
+            </div>
+        </div>
+    </div>
+</div>
+{% include 'footer.html' %}
 {% endblock %}
