--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,11 +1,42 @@
 {% extends 'navbar.html' %}
 {% load bootstrap4 %}
 
+{% block title %} корзина {% endblock %}
 {% block content %}
-{% for cart_item in cart_items %}
-    <div>
-        <p>Product: {{ cart_item.product.title }}</p>
-        <p>Price: {{ cart_item.product.price }} </p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8">
+      <h2>Your Cart</h2>
+      <hr>
+      {% for cart_item in cart_items %}
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5 class="card-title">{{ cart_item.product.title }}</h5>
+          <p class="card-text">Price: {{ cart_item.product.price }}</p>
+        </div>
+        <div class="card-footer">
+          {% if request.user.is_staff %}
+          {% if cart_item.user %}
+          <p>User: {{ cart_item.user.username }}</p>
+          <p>Email: {{ cart_item.user.email }}</p>
+          <p>Shipping Address: {{ cart_item.user.profile.shipping_address }}</p>
+          {% else %}
+          <p>User: General</p>
+          <p>Email: -</p>
+          <p>Shipping Address: -</p>
+          {% endif %}
+          {% endif %}
+          <form action="{% url 'remove_from_cart' cart_item.id %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger btn-sm float-right">Remove</button>
+          </form>
+        </div>
+      </div>
+      {% empty %}
+      <p>Your cart is empty.</p>
+      {% endfor %}
     </div>
-{% endfor %}
+  </div>
+</div>
+{% include 'footer.html' %}
 {% endblock %}
