--- a/templates/comp_detail.html
+++ b/templates/comp_detail.html
@@ -1,15 +1,30 @@
 {% extends 'navbar.html' %}
 {% load bootstrap4 %}
 
+{% block title %} подробнее о компьютере {% endblock %}
 {% block content %}
-
-<h1>{{ computer.title }}</h1>
-  <p>{{ computer.info }}</p>
-  <p>Цена: {{ computer.price }}</p>
-  <img src="{{ computer.image.url }}" alt="{{ computer.title }}">
-
-  <form action="{% url 'add_to_cart' computer.pk %}" method="post">
-    {% csrf_token %}
-    <button type="submit">Добавить в корзину</button>
-  </form>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h1>{{ computer.title }}</h1>
+            <p>{{ computer.info }}</p>
+            <p>Цена: {{ computer.price }}</p>
+            <form action="{% url 'add_to_cart' computer.pk %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-primary">Добавить в корзину</button>
+            </form>
+          </div>
+        </div>
+        {% if user.is_authenticated %}
+          <a href="{% url 'CompDelete' computer.pk %}" class="btn btn-danger mt-3">Удалить компьютер</a>
+        {% endif %}
+      </div>
+      <div class="col-md-6">
+        <img src="{{ computer.image.url }}" alt="{{ computer.title }}" class="img-fluid">
+      </div>
+    </div>
+  </div>
+{% include 'footer.html' %}
 {% endblock %}
