--- a/templates/comp_list.html
+++ b/templates/comp_list.html
@@ -2,6 +2,7 @@
 {% load my_filters %}
 {% load bootstrap4 %}
 
+{% block title %} список компьютеров {% endblock %}
 {% block content %}
   <div class="container mt-5">
     <h2 class="text-center mb-4">Список компьютеров</h2>
@@ -53,4 +54,5 @@
       </ul>
     </nav>
   </div>
+{% include 'footer.html' %}
 {% endblock %}
