--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,8 +5,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{% block title %}{% endblock %}</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+    body {
+        background-image: url('{% static "bg.png" %}');
+        background-size: 100% 100%; /* Растягиваем изображение фона на всю высоту и ширину */
+        background-repeat: no-repeat;
+        height: 100vh;
+    }
+</style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -36,7 +44,7 @@
               <a class="dropdown-item" href="{% url 'user_login' %}">Вход</a>
             {% endif %}
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'logout' %}">Выйзи из аккаунта</a>
+            <a class="dropdown-item" href="{% url 'logout' %}">Выйти из аккаунта</a>
           </div>
         </li>
       </ul>
